tests/NormalTests/paczka1/fuzzy1/72488682.err
Error in line 2: VROaf3sWubJ S117 92,3
Error in line 7: eUI7nn A139 70,9
Error in line 14: nZw S117 263,0
Error in line 21: eUI7nn S117 6,3
Error in line 9: S117 S446 255,9
Error in line 30: S117 A264 97,1
Error in line 22: eUI7nn S446 36,7
